style.css
/* 1vamos resetar antes de tudo */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* 2. CONFIGURAÇÃO DO CORPO */
body {
    font-family: Roboto, sans-serif; /* Simples e limpo */
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

/* 3. LINKS (Limpeza de fiação) */
a {
    text-decoration: none;
    color: inherit;
}

header, footer {
    background-color: #1f2937;
    color: white;
    /* display: flex; */
}


/* esta parte e da header e Hero */

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 16px 80px;
}

/* aqui e sobre o menu da navbar */

.nav-menu {
    display: flex;
    list-style: none;
    gap: 24px;
}

/* aqui sobre a brand */

.brand {
    font-size: 24px;
    font-weight: bold;
}

.nav-menu a {
    font-size: 18px;
    color: #e5e7eb;
}

/* aqui sobre o hero */

.hero-main {
    display: flex;
    gap: 48px;
    padding: 80px;
    padding-top: 100px;
    padding-bottom: 80px;
}

/* aqui e o titulo */

.hero-title {
    color: #f9faf8;
    font-size: 48px;
    font-weight: 900;
}

/* aqui o subtitulo */

.hero-subtitle {
    font-size: 18px;
    color: #e5e7eb;
}

/* aqui o btn */

.hero-btn {
    background-color: #3882f6;
    color: #ffffff;
    border: none;
    border-radius: 8px;
    padding: 8px 32px;
}

/* aqui e a parte da imag do hero */

.img-placeholder {
    width: 400px;
    height: 250px;
    background: #888;
    border: #3882f6 solid;
}

/* vamos ao info */

.info-section {
    background-color: #ffffff;
    color: #1f2937;
    display: flex;
    flex-direction: column;
    flex: 1;
    align-items: center;
    padding: 80px 0;
}

/* o container dos cards */
.cards-pai {
    display: flex;
    justify-content: center;
    gap: 48px;
}

/* os card individuais */

.card {
    width: 200px;
    text-align: center;
    /* para que os textos fiquem centalizados */
    display: flex;
    flex-direction: column;
    align-items: center;
}

.img-card {
    width: 150px;
    height: 150px;
    border: 4px solid #3882f6;
    border-radius: 12px;
}

.info-title {
    padding-bottom: 32px;
}

/* Aqui e  parte da citacao */

.filo-pai {
    background-color: #e5e7eb;
}

.filo-text {
    font-size: 36px;
    font-style: italic;
    font-weight: 300;
    color: #1f2937;
}

.autor {
    align-self: self-end;
    font-size: 24px;
    font-weight: bold;
}

.filo-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 100px 20%;
}

/* Aqui e do cta */

.cta-pai {
    background-color: #ffffff;
    padding: 100px 15%;
}

.cta-box {
    background-color: #3882f6;
    color: #ffffff;
    padding: 48px 80px;
    border-radius: 12px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.cta-btn {
    border: 2px solid white;
    background-color: transparent;
    color: #ffffff;
    padding: 8px 32px;
    border-radius: 8px;
    font-weight: bold;
}

/* aqui e do footer */

.footer-pai {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 32px;
}

